# ado-mcp

./: .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  COMPREHENSIVE_PIPELINE_API_ANALYSIS.md  CONTRIBUTING.md  GEMINI.md  GITHUB_RESOURCES_INTEGRATION.md  ISSUES.md  LICENSE.md  MANIFEST.in  NEW_TOOL_WORKFLOW.md  PLANNING.md  PRODUCTION_CHECKLIST.md  README.md  TASK.md  TASKLIST.md  TEST_CLEANUP.md  Taskfile.yaml  ado_client.py  conftest.py  create_github_resources_pipeline.py  create_runtime_variables_pipeline.py  create_simple_github_pipeline.py  debug_enhanced_types.py  debug_preview_pipeline.py  debug_processes.py  fix_all_remaining_issues.py  fix_flaky_tests.py  fix_specific_tests.py  fix_test_server.py  fix_test_server_correct.py  fix_tests_api_changes.py  fix_undefined_variables.py  hello.py  llms-fastmcp-full.txt  llms-full.txt  my_mcp_server.py  pyproject.toml  pytest.ini  (+12 more)
.ado/steps/: install_task.yml
.azure-pipelines/: ci.yml
.github/workflows/: ci.yml
ado/: __init__.py  auth.py  cache.py  client.py  client_old.py  config.py  errors.py  graceful_cancellation.py  helpers.py  lookups.py  models.py  resources.py  retry.py  telemetry.py  tools.py
ado/enhanced_tools/: __init__.py  projects.py
ado/pipelines/: __init__.py  builds.py  logs.py  pipelines.py
ado/processes/: __init__.py  client.py  models.py  tools.py  utils.py
ado/utils/: __init__.py  fuzzy_matching.py  token_estimation.py
ado/work_items/: __init__.py  batch_client.py  batch_operations.py  client.py  comments_and_history.py  comments_client.py  crud_client.py  crud_operations.py  field_validators.py  models.py  path_validators.py  query_client.py  query_operations.py  query_utils.py  relationship_validators.py  state_validators.py  tools.py  type_client.py  type_introspection.py  validation.py
ado_integrations/: client.py
ado_integrations/types/: build_definition.py  pipeline.py
docs/: CONTRIBUTOR_ONBOARDING_CHECKLIST.md  CONTRIBUTOR_SETUP.md  FUZZY_MATCHING.md  GITHUB_SERVICE_CONNECTION_SETUP.md  MIGRATION_SUMMARY.md  TERRAFORM_TROUBLESHOOTING.md  TESTING_SETUP.md  api.rst  conf.py  examples.md  index.rst  installation.md  requirements.txt  troubleshooting.md  usage.md  work-items-batch-operations.md
docs/_autosummary/: ado.cache.rst  ado.client.rst  ado.errors.rst  ado.helpers.rst  ado.lookups.rst  ado.models.rst  ado.pipelines.builds.rst  ado.pipelines.logs.rst  ado.pipelines.pipelines.rst  ado.pipelines.rst  ado.resources.rst  ado.rst  ado.tools.rst
scripts/: analyze_slow_tests.py  comprehensive_test_fix.py  convert_tests_to_name_lookup.py  disable-notifications.ps1  disable-notifications.sh  fix_broken_imports.py  fix_hardcoded_pipeline_ids.py  version_manager.py
src/: test_config.py
tasks/: TASKLIST.md  prd-ado-mcp-server.md  prd-llm-friendly-mcp-server.md  prd-terraform-test-infrastructure.md  prd-work-items.md  tasks-prd-llm-friendly-mcp-server.md  tasks-prd-terraform-test-infrastructure.md  tasks-prd-work-items.md
terraform/: NOTIFICATIONS.md  main.tf  outputs.tf  variables.tf
tests/: README.md  TEST_REORGANIZATION_PLAN.md  conftest.py  conftest_dynamic.py  test_ado_client.py  test_caching.py  test_caching_e2e.py  test_cancellation_handling.py  test_comprehensive_tool_registration.py  test_environment.py  test_github_resources.py  test_github_resources_demo.py  test_github_resources_integration.py  test_github_resources_simple.py  test_helpers.py  test_my_mcp_server.py  test_pipeline_run_params.py  test_production_features.py  test_resources_capability.py  test_server.py  test_stable_branch_resources.py  test_test_config.py
tests/ado/: test_client.py
tests/builds/: test_get_build_by_id.py
(+68 files in other folders)
